--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@ table{
     border-collapse: collapse;
     text-align: center;
     border: none;
+    background-color: rgb(246, 245, 245);
 }
 
 button{
